--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,28 +1,13 @@
 ---
 - name: Remove invalid docker versions
   yum:
-    name: "{{ item }}"
+    name: [docker,  docker-client, docker-client-latest, docker-common, docker-latest, docker-latest-logrotate, docker-logrotate, docker-selinux, docker-engine-selinux, docker-engine]
     state: absent
-  with_items:
-    - docker 
-    - docker-client
-    - docker-client-latest 
-    - docker-common 
-    - docker-latest 
-    - docker-latest-logrotate 
-    - docker-logrotate 
-    - docker-selinux 
-    - docker-engine-selinux 
-    - docker-engine
 
 - name: Ensure docker dependencies are present
   yum:
-    name: "{{ item }}"
+    name: [yum-utils, device-mapper-persistent-data, lvm2]
     state: present
-  with_items:
-    - yum-utils
-    - device-mapper-persistent-data
-    - lvm2
 
 - name: Install yum repo
   get_url:
