--- a/roles/system/tasks/main.yml
+++ b/roles/system/tasks/main.yml
@@ -1,11 +1,7 @@
 - name: Install base packages
   yum:
-    name: "{{ item }}"
+    name: [vim, zsh, git]
     state: present
-  with_items:
-    - vim
-    - zsh
-    - git
   become: yes
 
 - name: Disable selinux
